kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ronniemoore-wiz-tasky
spec:
  type: LoadBalancer
  selector:
    app: ronniemoore-wiz-tasky
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
